# astroml

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARTIFACT_STORAGE.md  ARTIFACT_STORE_AND_METRICS.md  ARTIFACT_STORE_INTEGRATION.md  ARTIFACT_STORE_QUICKREF.md  ARTIFACT_STORE_SUMMARY.md  CONTRIBUTING.md  DOCKER.md  DOCKER_COMPLETION_SUMMARY.md  DOCKER_FILES_INDEX.md  DOCKER_PRODUCTION_DEPLOYMENT.md  DOCKER_QUICK_REFERENCE.md  DOCKER_TROUBLESHOOTING.md  DOCKER_VALIDATION_CHECKLIST.md  DOCKER_VERIFICATION_STATUS.md  Dockerfile  Dockerfile.soroban  EXAMPLE_FIX_SUMMARY.md  FEATURE_STORE_VERIFICATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_ISSUES_176_170_166.md  Makefile  PRODUCTION_READY.md  PR_DESCRIPTION.md  QUICKSTART_GUIDE.md  README.md  REQUIREMENTS.md  SECURITY_AUDIT.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint-ingestion.sh  docker-entrypoint-training.sh  docker-env-guide.md  main.py  oom_snapshot_memory_experiment.ipynb  pyproject.toml  (+6 more)
.github/: PULL_REQUEST_TEMPLATE.md
api/: Dockerfile  __init__.py  app.py  config.py  database.py  loyalty_models.py  requirements.txt  schemas.py
astroml/: .gitignore  cli.py  graph_utils.py  quick_start.py
deploy/: deploy.sh
docker/: docker-entrypoint.sh
docs/: DATA_QUALITY_VALIDATION.md  DOCKER_SETUP.md  FEATURE_STORE.md  FRAUD_REGISTRY_CONTRACT.md  KUBERNETES_DEPLOYMENT.md  ONBOARDING.md  index.md  model-registry.md  scaling-optimization.md
examples/: 01_getting_started.ipynb  02_fraud_detection.ipynb  README.md  quick_start.py  (+7 more)
(+295 files in other folders)
